[Task][BE] API to display all billables (#71)
* [Task][BE] API to display all billables

* added await keyword and specified return status code

---------
